--- a/pom.xml
+++ b/pom.xml
@@ -25,14 +25,14 @@
   </dependencies>
  <distributionManagement>
     <repository>
-      <id>devops-releases</id>
+      <id>devops-release</id>
       <name>devops-releases</name>
-      <url>http://ec2-18-217-220-234.us-east-2.compute.amazonaws.com:8081/nexus/content/repositories/devops-releases/</url>
+      <url>http://192.168.99.100:8081/nexus/content/repositories/devops-release/</url>
     </repository>
     <snapshotRepository>
-      <id>devops-snapshots</id>
+      <id>devops-snaoshots</id>
       <name>devops-snapshots</name>
-      <url>http://ec2-18-217-220-234.us-east-2.compute.amazonaws.com:8081/nexus/content/repositories/devops-snapshots/</url>
+      <url>http://192.168.99.100:8081/nexus/content/repositories/devops-snapshot/</url>
     </snapshotRepository>
   </distributionManagement>
 </project>
